--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
-body {
+html, body {
     margin: 0;
+    padding: 0;
     overflow: hidden;
+    height: 100%;
+    width: 100%;
     background: #222;
 }
 
 canvas {
-    background: #444;
     display: block;
-    margin: auto;
+    background: #444;
+    width: 100vw;
+    height: 100vh;
 }
